--- a/vue/guestbook/index.html
+++ b/vue/guestbook/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>留言板</title>
+    <style>
+      body {
+        --color-text-black: #3D3D3D;
+        --color-green: #3AA253;
+        font-family: sans-serif;
+        margin: 0;
+        background-color: #E8E8E8;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
